Fix - fix double-gutter on right, by removing my bad fix for the horizontal overflow
the reason it was overflowing and adding a tiny horizontal scroll
was because i hadn't wrapped my rows in a fluid Container, so my
hack was max-width: 100% on the rows themselves

--- a/src/App.css
+++ b/src/App.css
@@ -36,7 +36,3 @@
     transform: rotate(360deg);
   }
 }
-
-.row {
-  max-width: 100%;
-}
